Added videos in the gallery view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
             android:name=".DisplayImage"
             android:label="@string/app_name" >
         </activity>
+
+        <activity
+            android:name=".DisplayVideo"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
