--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             android:name=".TakePictureActivity"
             android:label="@string/app_name" >
         </activity>
+
+        <activity
+            android:name=".TakeVideoActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
